--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="logo">Balay Dako</div>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Members</a></li>
+                <li><a href="index.html" class="active">HOME</a></li>
+                <li><a href="#">CONTACT US</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">MEMBERS</a></li>
             </ul>
         </nav>
     </header>
