--- a/index.html
+++ b/index.html
@@ -63,21 +63,35 @@
         </div>
     </section>
 
-      <div class="about">
-        <div class="header-about-container">
-          <h2>All About Our Homeowner's Organization</h2>
-        </div>
-        <div class="body-about-container"></div>
-        <p>
-          Our homeowner’s organization is dedicated to providing resources,
-          support, and a sense of community for homeowners. We believe that every
-          homeowner deserves access to expert advice, reliable solutions, and a
-          network of like-minded individuals. From financial tips to home
-          improvement guidance, we are committed to making homeownership a smooth
-          and enjoyable experience.
-        </p>
-        </div>
+    <div class="about-container">
+      <div class="text-container">
+          <div class="header-about-container">
+              <h2>All About Our Homeowner's <br>Organization</h2>
+          </div>
+          <div class="body-about-container">
+              <p>
+                  Our homeowner’s organization is dedicated to providing resources,
+                  support, and a sense of community for homeowners. We believe that every
+                  homeowner deserves access to expert advice, reliable solutions, and a
+                  network of like-minded individuals. From financial tips to home
+                  improvement guidance, we are committed to making homeownership a smooth
+                  and enjoyable experience.
+              </p>
+          </div>
       </div>
+    
+      <div class="map-container">
+          <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1934.7870879026998!2d120.95019885261955!3d14.102296362616803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd7772447d5445%3A0x903beff1916baf77!2sBalay%20Dako!5e0!3m2!1sen!2sph!4v1664437146586!5m2!1sen!2sph"
+              width="100%" height="450"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+      </div>
+  </div>
+  
 
     <footer>
       <p>Copyright © 2025 Balay Dako</p>
