updated as of 1:06pm 2/14

--- a/index.html
+++ b/index.html
@@ -91,14 +91,17 @@
           </iframe>
       </div>
   </div>
-  
 
-    <footer>
+    <div class="footer">
+      <div class="footer-copyright">
       <p>Copyright © 2025 Balay Dako</p>
+      </div>
+      <div class="footer-body">
       <p>
         All Rights Reserved | <a href="#">Terms and Conditions |</a>
         <a href="#">Privacy Policy</a>
       </p>
-    </footer>
+      </div>
+    </div>
   </body>
 </html>
