--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="index.html" class="active">HOME</a></li>
             <li><a href="#">CONTACT US</a></li>
             <li><a href="#">ABOUT</a></li>
-            <li><a href="#">MEMBERS</a></li>
+            <li><a href="/members.html">MEMBERS</a></li>
           </ul>
         </nav>
       </div>
