--- a/members.html
+++ b/members.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Balay Dako - Members</title>
+    <title>Members</title>
+    <link rel="icon" href="/images/logo.png" />
     <link rel="stylesheet" href="styles.css" />
     <style>
       body {
@@ -86,27 +87,27 @@
         <div class="team-container">
           <div class="team-member">
             <img src="/images/cagara.jpg" alt="Ms. Emma" />
-            <h3>Ms. Emma</h3>
+            <h3>Marcelo <br />Cagara Jr.</h3>
             <p>Graphic Designer</p>
           </div>
           <div class="team-member">
             <img src="images/dinauanao.jpg" alt="Mr. David" />
-            <h3>Mr. David</h3>
+            <h3>Mikylla Therese Dinauanao</h3>
             <p>Software Engineer</p>
           </div>
           <div class="team-member">
             <img src="images/salar.png" alt="Mr. Liam" />
-            <h3>Mr. Liam</h3>
+            <h3>Allana Felize Salar</h3>
             <p>Web Developer</p>
           </div>
           <div class="team-member">
             <img src="images/olarte.png" alt="Ms. Sophia" />
-            <h3>Ms. Sophia</h3>
+            <h3>Kyle <br />Olarte</h3>
             <p>Product Manager</p>
           </div>
           <div class="team-member">
             <img src="images/nudalo.png" alt="Mr. John" />
-            <h3>Mr. John</h3>
+            <h3>Eljei <br />Nudalo</h3>
             <p>Marketing Specialist</p>
           </div>
         </div>
