--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Balay Dako - Home</title>
+    <title>Balay Dako</title>
+    <link rel="icon" href="/images/logo.png">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
